# cv-mid-term-project-25-26

./: .gitconfig  .gitignore  CMakeLists.txt  MID-COURSE PROJECT.docx  README.md  generate_report_docx.py  motion_extraction.cpp  report.txt  report_part_3.txt
data/: README.md
delivery/: CMakeLists.txt  MID-COURSE PROJECT.docx  README.md
delivery/inc/: app.h  evaluation.h
delivery/src/: app.cpp  evaluation.cpp  localization.cpp  main.cpp  motion_extraction.cpp
inc/: app.h  evaluation.h  localization.h  motion_extraction.h
src/: README.md  app.cpp  evaluation.cpp  localization.cpp  main.cpp  motion_extraction.cpp
src/app/: app.cpp
